--- a/FAQGeneral.mediawiki
+++ b/FAQGeneral.mediawiki
@@ -1,8 +1,10 @@
+<!-- pragma camelcase off -->
+
 = FAQs: General =
 
 
 == What is Simple DirectMedia Layer? ==
-Very simply, Simple !DirectMedia Layer, or SDL for short, is a library that allows you low level access to a video framebuffer, audio output, mouse, keyboard, and joysticks across a wide variety of operating systems. 
+Very simply, Simple DirectMedia Layer, or SDL for short, is a library that allows you low level access to a video framebuffer, audio output, mouse, keyboard, and joysticks across a wide variety of operating systems. 
 
 == What platforms are supported? ==
 The current version supports Windows XP, Vista, and 7, MacOS X 10.4+, Linux 2.6+, iOS 3.1.3+, and Android 1.6+.  SDL 1.3 includes code for other operating systems but they are not officially supported.  See [http://hg.libsdl.org/SDL/file/default/README.Platforms] for the most recent list.
@@ -14,7 +16,8 @@ The latest stable version is 1.2 You can always get the very latest bleeding edg
 http://www.libsdl.org/
 
 == Where do I send questions / feedback? ==
-You can send questions and feedback through the Feedback form (above right) or to the main SDL mailing list: http://www.libsdl.org/mailing-list.php
+You can send questions and feedback through an SDL forum (http://forums.libsdl.org/) or mailing list (http://www.libsdl.org/mailing-list.php) or using the ''Feedback'' form (above right).
+<!-- # broken link - missing page - http://www.libsdl.org/mailing-list.phpthrough -->
 
 == Where do I send bug reports / patches? ==
 You can submit bug reports and patches to the SDL bugzilla bug tracking system: http://bugzilla.libsdl.org/
@@ -29,15 +32,16 @@ The nice folks at gmane.org have provided a news <-> mail gateway for the main S
 Yes, you can find people hanging out on the IRC server at irc.freenode.net on the channel #SDL
 
 == Is there an official logo? ==
-Yes, the official SDL logo was created by Arne Claus, and is available here: http://www.libsdl.de/logo/ Several community contributed logo ideas are also available at that URL. You are welcome to use any of them, as well as any artwork on the SDL website, to represent Simple !DirectMedia Layer.
+Yes, the official SDL logo was created by Arne Claus, and is available here: http://www.libsdl.de/logo/ Several community contributed logo ideas are also available at that URL. You are welcome to use any of them, as well as any artwork on the SDL website, to represent Simple DirectMedia Layer.
 
 == I have a project that uses SDL, how do I add it to the SDL website? ==
 If you have a project that you feel is ready for the general public, you can add it to the SDL website:
 
- 1. Create an account under the Site Actions menu on the SDL website
- 1. Log in from the Site Actions menu with your new account
- 1. Go to the download page that matches your project (game, application, etc.)
+ 1. Create an account under the Site Actions menu on the SDL website (http://www.libsdl.org/index.php)
+ 1. Log in from the Site Actions menu with your account
+ 1. Go to the Download page that matches your project type (Games, Applications, etc.)
  1. Click on the "submit" button at the bottom of the page
+ 1. Fill in the form and click Submit at the bottom
 
 == What's up with SDL 2.0? Can I help? ==
-SDL 1.3 is in development and when it matures it will become SDL 2.0. You can download a PRERELEASE version of the code from the SDL Mercurial page (http://www.libsdl.org/hg.php) and provide feedback on the mailing list.
+SDL 1.3 is in development and when it matures it will become SDL 2.0. You can download a PRERELEASE version of the code from the SDL Mercurial page (http://www.libsdl.org/hg.php) and provide feedback on the [http://lists.libsdl.org/listinfo.cgi/sdl-libsdl.org Development mailing list].<br/>If you want to contribute to the wiki check out the [http://wiki.libsdl.org/moin.cgi/Contributing Contributing] page.
