--- a/SDL_GetScancodeName.mediawiki
+++ b/SDL_GetScancodeName.mediawiki
@@ -1,5 +1,5 @@
 <!-- pragma section-numbers off -->
-<!-- pragma disable-camelcase -->
+<!-- pragma camelcase off -->
 '''DRAFT'''
 
 = SDL_GetScancodeName =
@@ -14,11 +14,11 @@ const char* SDL_GetScancodeName(SDL_Scancode scancode)
 == Function Parameters ==
 {|
 |'''scancode'''
-|the desired [[SDL_Scancode]] to query ???
+|the ,,desired,, [[SDL_Scancode]] to query ???
 |}
 
 == Return Value ==
-Returns a pointer to a UTF-8 string that stays valid at least until the next call to this function. If you need it around any longer, you must copy it. If the scancode doesn't have a name, this function returns an empty string ("").  <<Color2(green,Should scancode here be bold?  Should the pointer be mentioned?)>>
+Returns a pointer to the name for the scancode. If the scancode doesn't have a name this function returns an empty string ("").  <<Color2(green,Should scancode here be bold?  Should the pointer be mentioned?  Any error state?)>>
 
 == Code Examples ==
 ```c++
