--- a/SDL_GetScancodeName.mediawiki
+++ b/SDL_GetScancodeName.mediawiki
@@ -18,7 +18,9 @@ const char* SDL_GetScancodeName(SDL_Scancode scancode)
 |}
 
 == Return Value ==
-Returns a pointer to the name for the scancode. If the scancode doesn't have a name this function returns an empty string ("").  <<Color2(green,Should scancode here be bold?  Should the pointer be mentioned?  Any error state?)>>
+Returns a pointer to the name for the scancode. If the scancode doesn't have a name this function returns an empty string ("").  
+
+<<Color2(green,Should scancode here be bold?  Should the pointer be mentioned?  Any error state?)>>
 
 == Code Examples ==
 ```c++
@@ -30,6 +32,7 @@ See [[SDL_Scancode]] for details.
 
 == Related Functions ==
 :[[SDL_GetScancodeFromKey]]
+:[[SDL_GetScancodeFromName]]
 
 ----
 [[CategoryAPI]], [[CategoryKeyboard]]
