--- a/SDL_AudioStatus.mediawiki
+++ b/SDL_AudioStatus.mediawiki
@@ -1,5 +1,5 @@
 <!-- pragma section-numbers off -->
-<!-- pragma disable-camelcase -->
+<!-- pragma camelcase off -->
 
 = SDL_AudioStatus =
 An enumeration of audio device states.
