--- a/SDL_Keymod.mediawiki
+++ b/SDL_Keymod.mediawiki
@@ -1,9 +1,8 @@
-<!-- # page was renamed from SDL_Keymod -->
 <!-- pragma section-numbers off -->
-<!-- pragma disable-camelcase -->
+<!-- pragma camelcase off -->
 '''DRAFT'''
 
-= SDL_Mod =
+= SDL_Keymod =
 An enumeration of key modifier masks.
 
 
@@ -43,7 +42,7 @@ An enumeration of key modifier masks.
 |the Caps Lock key is down
 |-
 |KMOD_MODE
-|the !AltGr key is down
+|the AltGr key is down
 |-
 |KMOD_CTRL
 |(KMOD_LCTRL|KMOD_RCTRL)
