--- a/SDL_PixelFormatEnum.mediawiki
+++ b/SDL_PixelFormatEnum.mediawiki
@@ -1,5 +1,5 @@
 <!-- pragma section-numbers off -->
-<!-- pragma disable-camelcase -->
+<!-- pragma camelcase off -->
 
 = SDL_PixelFormatEnum =
 An enumeration of pixel formats.
