add code example from old wiki http://www.libsdl.org/cgi/docwiki.cgi/Audio_Example

--- a/SDL_MixAudio.mediawiki
+++ b/SDL_MixAudio.mediawiki
@@ -31,10 +31,46 @@ void SDL_MixAudio(Uint8*       dst,
 
 == Code Examples ==
 ```c++
-You can add your code example here
+static Uint8 *audio_chunk;
+static Uint32 audio_len;
+static Uint8 *audio_pos;
+
+/* The audio function callback takes the following parameters:
+   stream:  A pointer to the audio buffer to be filled
+   len:     The length (in bytes) of the audio buffer
+*/
+void fill_audio(void *udata, Uint8 *stream, int len)
+{
+/* Only play if we have data left */
+    if ( audio_len == 0 )
+        return;
+
+/* Mix as much data as possible */
+    len = ( len > audio_len ? audio_len : len );
+    SDL_MixAudio(stream, audio_pos, len, SDL_MIX_MAXVOLUME);
+    audio_pos += len;
+    audio_len -= len;
+}
+
+/* Load the audio data ... */
+
+;;;;;
+
+audio_pos = audio_chunk;
+
+/* Let the callback function play the audio chunk */
+SDL_PauseAudio(0);
+
+/* Do some processing */
+
+;;;;;
+
+/* Wait for sound to complete */
+while ( audio_len > 0 ) {
+    SDL_Delay(100);         /* Sleep 1/10 second */
+}
+SDL_CloseAudio();
 ```
-<<Color2(green,There is a reference to the following in the old wiki. Do any of these examples belong in the new wiki?)>>
-http://www.libsdl.org/cgi/docwiki.cgi/Audio_Examples
 
 == Remarks ==
 This takes an audio buffer '''src''' of '''len''' bytes in the playing audio format and mixes it into '''dst''', performing addition, volume adjustment, and overflow clipping.
