--- a/Introduction.mediawiki
+++ b/Introduction.mediawiki
@@ -1,4 +1,5 @@
 <!-- pragma section-numbers 2 -->
+<!-- pragma camelcase off -->
 <!-- acl All:read -->
 
 = Introduction to SDL 1.3 =
@@ -6,17 +7,16 @@
 
 == Introduction to SDL ==
 === What is SDL? ===
-The Simple !DirectMedia Layer library (SDL) is a general API that provides low level access to audio, keyboard, mouse, joystick, 3D hardware via OpenGL, and 2D framebuffer across multiple platforms.
+The Simple DirectMedia Layer library (SDL) is a general API that provides low level access to audio, keyboard, mouse, joystick, 3D hardware via OpenGL, and 2D framebuffer across multiple platforms.
 
 The current version (1.3) supports Windows XP, Windows Vista, Windows 7, Mac OS X, Linux, iOS, and Android. The code contains support for other operating systems but those are not officially supported.
-
-For the latest information on what is supported see http://hg.libsdl.org/SDL/file/default/README.Platforms.
+: For the latest information on what is supported see http://hg.libsdl.org/SDL/file/default/README.Platforms.
 
 SDL is written in C, but works with C++ natively, and has bindings to several other languages, including Ada, C#, Eiffel, Erlang, Euphoria, Guile, Haskell, Java, Lisp, Lua, ML, Objective C, Pascal, Perl, PHP, Pike, Pliant, Python, Ruby, and Smalltalk.
+: For the latest list of languages see http://www.libsdl.org/languages.php
 
 SDL 1.3 is under the [http://www.zlib.net/zlib_license.html zlib] license, which allows free use for commercial and non-commercial purposes.  
 
-<!-- #This library is distributed under [http://www.libsdl.org/license-lgpl.php GNU LGPL version 2.1]. This license allows you to use SDL freely in commercial programs as long as you link with the dynamic library. A full commercial license for SDL 1.3 is available from [http://www.galaxygameworks.com Galaxy Gameworks]. -->
 
 === What can SDL do? ===
 ''''' Video'''''
