--- a/Support.mediawiki
+++ b/Support.mediawiki
@@ -4,11 +4,33 @@
 '''DRAFT'''
 
 
-= SDL 1.3 Support & Information =
+= SDL 1.3 Information & Support =
 
+<br/>
+== Information Sources ==
 
+```#!wiki tip
+'''Tip'''
 
+Although there is some overlap between SDL version 1.2 and 1.3, the information in this wiki is specifically for SDL version 1.3.  For SDL 1.2 see http://www.libsdl.org/index.php
+```
 
+There are a number of sources for basic information about version 1.3 of the Simple DirectMedia Layer (SDL) API.  Here are a few:
+
+=== Documentation ===
+Congratulations!  You already found this one.  Use the left sidebar to navigate through the SDL 1.3 documentation provided in this wiki.  Use the Feedback pull-down form in the upper left if you have suggestions for or questions about this wiki.
+
+=== Header Files ===
+The SDL 1.3 header files can be found here:
+http://hg.libsdl.org/SDL/file/default/include
+
+=== Articles ===
+http://wiki.libsdl.org/moin.cgi/Articles
+
+=== Books ===
+http://wiki.libsdl.org/moin.cgi/Books
+
+<br/>
 == Support Options ==
 SDL is a community-supported library.  Here are a few options if you need assistance:
 
@@ -16,7 +38,7 @@ SDL is a community-supported library.  Here are a few options if you need assist
 === Tutorials ===
 http://wiki.libsdl.org/moin.cgi/Tutorials
 
-Note that there is a link to SDL 1.2 tutorials here as well.
+There is a link to SDL 1.2 tutorials here as well.
 
 === FAQs ===
 http://wiki.libsdl.org/moin.cgi/FAQs
@@ -40,7 +62,3 @@ http://news.gmane.org/gmane.comp.lib.sdl
 http://bugzilla.libsdl.org/
 
 You can submit bug reports and patches to the SDL Bugzilla bug tracking system.
-
-== Information About SDL ==
-=== Articles ===
-=== Books ===
