--- a/Support.mediawiki
+++ b/Support.mediawiki
@@ -1,8 +1,6 @@
 <!-- pragma section-numbers off -->
 <!-- pragma camelcase off -->
 <!-- acl All:read -->
-'''DRAFT'''
-
 
 = SDL 1.3 Information & Support =
 
@@ -48,7 +46,7 @@ http://forums.libsdl.org/
 
 Most people will find the '''SDL Development''' forum the most helpful.  This is the best place to ask technical questions that are not answered by tutorials or FAQs.  
 
-<!> NOTE:  Because of the deluge of spammers, '''you must join the "Community" group before you are allowed to post on this forum'''. You can find specific instructions in the <<Color2(blue,Welcome!)>> message in the SDL Development forum.  Please allow a few days for this process to be completed.   
+<!> NOTE:  Because of the deluge of spammers, '''you MUST join the "Community" group before you are allowed to post on this forum'''. You can find specific instructions in the <<Color2(blue,Welcome!)>> message in the SDL Development forum.  Please allow a few days for this process to be completed.   
 
 === Mailing Lists ===
 http://www.libsdl.org/mailing-list.php
