--- a/Support.mediawiki
+++ b/Support.mediawiki
@@ -10,9 +10,9 @@
 ```#!wiki tip
 '''Tip'''
 
-Although there is some overlap between SDL version 1.2 and 1.3, the information in this wiki is specifically for SDL version 1.3.  For SDL 1.2 see http://www.libsdl.org/index.php
+Although there is some overlap between SDL version 1.2 and 1.3, the information in this wiki is specifically for SDL version 1.3.  For SDL 1.2 see http://www.libsdl.org/index.php and http://www.libsdl.org/cgi/docwiki.cgi.
 ```
-
+<br/>
 There are a number of sources for basic information about version 1.3 of the Simple DirectMedia Layer (SDL) API.  Here are a few:
 
 === Documentation ===
