--- a/SDL_GetRenderDrawColor.mediawiki
+++ b/SDL_GetRenderDrawColor.mediawiki
@@ -1,8 +1,8 @@
 <!-- pragma section-numbers off -->
-<!-- pragma disable-camelcase -->
+<!-- pragma camelcase off -->
 
 = SDL_GetRenderDrawColor =
-Use this function to get the color used for drawing operations.
+Use this function to get the color used for drawing operations (Rect, Line and Clear).
 
 
 == Syntax ==
