update content - per Sam (desc); camelcase

--- a/SDL_SetRenderDrawBlendMode.mediawiki
+++ b/SDL_SetRenderDrawBlendMode.mediawiki
@@ -1,8 +1,8 @@
 <!-- pragma section-numbers off -->
-<!-- pragma disable-camelcase -->
+<!-- pragma camelcase off -->
 
 = SDL_SetRenderDrawBlendMode =
-Use this function to set the blend mode used for drawing operations.
+Use this function to set the blend mode used for drawing operations (Fill and Line).
 
 
 == Syntax ==
