--- a/CategoryInput.mediawiki
+++ b/CategoryInput.mediawiki
@@ -3,7 +3,12 @@
 <!-- pragma camelcase off -->
 <!-- format wiki -->
 <!-- language en -->
+
 '''DRAFT'''
+
+```#!wiki warning
+'''''The SDL_input.h header is incomplete and has been temporarily removed from the wiki.  Please disregard this and related pages until this notice has been removed.'''''
+```
 
 = Input Device Support =
 
