--- a/SDL_GetNumInputDevices.mediawiki
+++ b/SDL_GetNumInputDevices.mediawiki
@@ -2,6 +2,10 @@
 <!-- pragma camelcase off -->
 '''DRAFT'''
 
+```#!wiki warning
+'''''The SDL_input.h header is incomplete and has been temporarily removed from the wiki.  Please disregard this and related pages until this notice has been removed.'''''
+```
+
 = SDL_GetNumInputDevices =
 Use this function to get the number of ,,mouse,, input devices available.
 
@@ -31,4 +35,4 @@ You can add your code example here
 :[[SDL_OtherFunction]]
 
 ----
-[[CategoryAPI]], [[CategoryInput]]
+Category<code></code>API, [[CategoryInput]]
