--- a/SDL_AddTimer.mediawiki
+++ b/SDL_AddTimer.mediawiki
@@ -1,5 +1,5 @@
 <!-- pragma section-numbers off -->
-<!-- pragma disable-camelcase -->
+<!-- pragma camelcase off -->
 '''DRAFT'''
 
 = SDL_AddTimer =
@@ -16,17 +16,17 @@ SDL_TimerID SDL_AddTimer(Uint32            interval,
 == Function Parameters ==
 {|
 |'''interval'''
-|^the time, in milliseconds, for the new timer to wait/cycle^; see [[#Remarks|Remarks]] for details
+|the timer delay (ms) passed to '''callback'''; see [[#Remarks|Remarks]] for details
 |-
 |'''callback'''
-|^the callback function to run/call^ ''-or-'' *the SDL timer callback function which is called when the specified '''interval''' elapses*; see [[#callback|Remarks]] for details
+|the callback function to call when the specified '''interval''' elapses; see [[#callback|Remarks]] for details
 |-
 |'''param'''
-|^the parameters of the timer^ ''-or-'' *the user parameter which is passed to the callback function*
+|the user parameter passed to '''callback'''; see [[#callback|Remarks]] for details
 |}
 
 == Return Value ==
-Returns a timer ID or NULL when an error occurs^; call [[SDL_GetError]]() for more information.^
+Returns a timer ID or NULL if an error occurs,,; call [[SDL_GetError]]() for more information.,,
 
 == Code Examples ==
 *
@@ -59,7 +59,7 @@ Uint32 my_callbackfunc(Uint32 interval, void *param)
     return(interval);
 }
 ```
-Note that it is possible to avoid the multithreading problems with SDL timers by giving to userevent.data1 the address of a function you want to be executed and to userevent.data2 its params, and then deal with it in the event loop. 
+Note that it is possible to avoid the multithreading problems with SDL timers by giving to <code>userevent.data1</code> the address of a function you want to be executed and to <code>userevent.data2</code> its params, and then deal with it in the event loop. 
 ```c++
 /* with the same code as before: */
 Uint32 my_callbackfunc(Uint32 interval, void *param)
@@ -91,25 +91,28 @@ while (SDL_PollEvent (&event))
 *
 
 == Remarks ==
-*<br/>The granularity of the timer ^used by '''interval'''^ is platform-dependent, but you should count on it being at least 10 ms as this is the most common number. This means that if you request a 16 ms timer, your callback will run approximately 20 ms later on an unloaded system. If you wanted to set a flag signaling a frame update at 30 frames per second (every 33 ms), you might set a timer for 30 ms (see [[#Code Example|Code Example]]). 
+*<br/>
+[[SDL_AddTimer]]() adds a callback function to be run after the specified number of milliseconds has elapsed.
 
 <span id="callback"></span>
-''^[[SDL_AddTimer]]()^ adds a callback function to be run after the specified number of milliseconds has elapsed.'' 
+The function prototype for '''callback''' is: 
+ ```
+Uint32 SDL_TimerCallback(Uint32 interval, 
+                         void*  param)
+```
+: where <code>interval</code> and <code>param</code> are passed in as-is from [[SDL_AddTimer]]().
+
 The callback function is passed the current timer interval ''and the user supplied parameter from the [[SDL_AddTimer]]() call'' and returns the next timer interval. If the returned value ''from the callback'' is the same as the one passed in, the ''timer'' continues ''at the same rate''. If the ''returned value from the callback is'' 0, the ''timer'' is canceled.
 
 <<Color2(green,The next paragraph is from the current header and seems to be redundant with the above except for the parts in italics.  Which is the better version?)>>
 
 The callback function is passed the current timer interval and returns the next timer interval.  If the returned value is the same as the one passed in, the ''periodic alarm'' continues, ''otherwise a new alarm is scheduled''.  If the ''callback returns'' 0, the ''periodic alarm'' is canceled.
 
-The '''callback''' parameters are as follows:
- ```
-Uint32 SDL_TimerCallback(Uint32 interval, 
-                         void*  param)
-```
-
 Another way to cancel a currently-running timer is by calling [[SDL_RemoveTimer]]() with the timer's ID (which was returned from [[SDL_AddTimer]]()).
 
-The timer callback function may run in a different thread than your main program, and so shouldn't call any functions from within itself. However, you may always call [[SDL_PushEvent]]().
+The granularity of the timer ^used by '''interval'''^ is platform-dependent, but you should count on it being at least 10 ms as this is the most common number. This means that if you request a 16 ms timer, your callback will run approximately 20 ms later on an unloaded system. If you wanted to set a flag signaling a frame update at 30 frames per second (every 33 ms), you might set a timer for 30 ms (see [[#Code Example|Code Example]]). 
+
+The timer callback function may run in a different thread than your main program, and so shouldn't call any functions from within it,,self,,. However, you may always call [[SDL_PushEvent]]().
 
 If you use this function, you need to pass SDL_INIT_TIMER to SDL_Init. <br/>*
 
