--- a/SDL_AudioSpec.mediawiki
+++ b/SDL_AudioSpec.mediawiki
@@ -36,14 +36,12 @@ A structure that contains the audio output format. It ^also^ contains a callback
 |-
 |SDL_AudioCallback
 |'''callback'''
-|a function that is called when the audio device needs more data; see [[#callback|Remarks]] for details
+|the function to call when the audio device needs more data; see [[#callback|Remarks]] for details
 |-
 |void*
 |'''userdata'''
-|a pointer that is passed as the first parameter to '''callback'''
+|a pointer that is passed to '''callback'''
 |}
-
-<<Color2(green,Seems like '''userdata''' should be an exception to the 'pointer rule'.)>>
 
 == Code Examples ==
 ```c++
@@ -91,7 +89,7 @@ The ,,calculated,, values '''silence''' and '''size''' are calculated by [[SDL_O
 Stereo samples are stored in a LRLRLR ordering.
 
 <span id="callback"></span>
-'''callback''' is of the form:
+The function prototype for '''callback''' is:
  ```
 void SDL_AudioCallback(void*  userdata,
                        Uint8* stream,
