--- a/SDL_AddEventWatch.mediawiki
+++ b/SDL_AddEventWatch.mediawiki
@@ -18,7 +18,7 @@ void SDL_AddEventWatch(SDL_EventFilter filter,
 |the function to call when an event happens; see [[#Remarks|Remarks]] for details
 |-
 |'''userdata'''
-|a pointer that is passed to the first parameter of '''filter'''
+|a pointer that is passed to '''filter'''
 |}
 
 == Code Examples ==
@@ -28,9 +28,11 @@ You can add your code example here
 
 == Remarks ==
 <<Include(SDL_SetEventFilter, , , from="Start Include here.", to="##End Include here")>>
-: where <code>YourEventFilter</code> is the name of your function, <code>userdata</code> is what was passed as '''userdata''' to [[SDL_AddEventWatch]]() and <code>event</code> is the event that triggered the callback.
+: where <code>YourEventFilter</code> is the name of your function and its parameters are:
+ ||<code>userdata</code>||what was passed as '''userdata''' to [[SDL_AddEventWatch]]()||
+ ||<code>event</code>||the event that triggered the callback||
 
-If the '''filter''' returns 0 then the event will be dropped from the queue, otherwise the event queue will be preserved.
+If '''filter''' returns 0 then the event will be dropped from the queue, otherwise the event queue will be preserved.
 
 /!\ Be very careful of what you do in the event filter function, as it may run in a different thread!
 
