--- a/SDL_SetEventFilter.mediawiki
+++ b/SDL_SetEventFilter.mediawiki
@@ -15,10 +15,10 @@ void SDL_SetEventFilter(SDL_EventFilter filter,
 == Function Parameters ==
 {|
 |'''filter'''
-|a function that gets called when an event happens; see [[#Remarks|Remarks]] for details
+|the function to call when an event happens; see [[#Remarks|Remarks]] for details
 |-
 |'''userdata'''
-|^a pointer to the event queue to filter^
+|a pointer that is passed to '''filter'''
 |}
 
 == Code Examples ==
@@ -29,17 +29,17 @@ You can add your code example here
 == Remarks ==
 <!-- #The following is included on SDL_AddEventWatch and SDL_DelEventWatch.  Any changes between these comments will be reflected on those pages.  Please use caution when editing.  Start Include here. -->
 
-The '''filter''' function has the following form:
+The function prototype for '''filter''' is:
  ```
 int YourEventFilter(void*      userdata,
                     SDL_Event* event)
 ```
 <!-- #End Include here -->
-where <code>YourEventFilter</code> is the name of your function, <code>userdata</code> is what was passed as '''userdata''' to [[SDL_SetEventFilter]](), and <code>event</code> is the event that triggered the callback.
+: where <code>YourEventFilter</code> is the name of your function and its parameters are:
+ ||<code>userdata</code>||what was passed as '''userdata''' to [[SDL_SetEventFilter]]()||
+ ||<code>event</code>||the event that triggered the callback||
 
-
-If the '''filter''' returns 1, then the event will be added to the internal queue.
-If it returns 0, then the event will be dropped from the queue, but the internal state will still be updated.  This allows selective filtering of dynamically arriving events.
+: If '''filter''' returns 1, then the event will be added to the internal queue.  If it returns 0, then the event will be dropped from the queue, but the internal state will still be updated.  This allows selective filtering of dynamically arriving events.
 
 /!\ Be very careful of what you do in the event filter function, as it may run in a different thread!
 
