--- a/SDL_GetEventFilter.mediawiki
+++ b/SDL_GetEventFilter.mediawiki
@@ -1,5 +1,5 @@
 <!-- pragma section-numbers off -->
-<!-- pragma disable-camelcase -->
+<!-- pragma camelcase off -->
 '''DRAFT'''
 
 = SDL_GetEventFilter =
@@ -15,16 +15,16 @@ SDL_bool SDL_GetEventFilter(SDL_EventFilter* filter,
 == Function Parameters ==
 {|
 |'''filter'''
-|^a pointer to fill in with the function to call when an event happens^ ???
+|the callback function to get; see [[#Remarks|Remarks]] for details
 |-
 |'''userdata'''
-|^a pointer to a pointer filled in with user-specified data^
+|a pointer to a pointer that is passed to '''filter'''
 |}
 
 == Return Value ==
-Returns the current event filter.  If there is no event filter set, this function returns SDL_FALSE.  
+Returns SDL_TRUE on success or SDL_FALSE if there is no event filter set,,; call [[SDL_GetError]]() for more information.,,  
 
-<<Color2(green,Does it return SDL_TRUE if there is a filter or does it return other text describing the filter?)>>
+<<Color2(green,The header says it "Returns the current event filter" but I suspect this isn't referring to the actual return value but the output of the function.  Should that be included here?)>>
 
 == Code Examples ==
 ```c++
@@ -32,16 +32,17 @@ You can add your code example here
 ```
 
 == Remarks ==
-Can be used to "chain" filters.
+This function can be used to "chain" filters.
 
-*<br/><<Color2(green,This functions appears to have changed dramatically since 1.2.  Is that correct?)>><br/>*
-
-<<Color2(green,Should the following be included here as it is in [[SDL_SetEventFilter]]()?)>>
-The '''filter''' function has the following form:
+<<Color2(green,Should the following be included here as it is in [[SDL_SetEventFilter]]()?  Right now this is different.)>>
+The function prototype for '''filter''' is:
  ```
-int SDL_EventFilter(void* userdata, SDL_Event* event)
+int SDL_EventFilter(void*      userdata,
+                    SDL_Event* event)
 ```
-where '''userdata''' is the event queue to filter and '''event''' is the desired event to pull from the queue.
+: where its parameters are:
+ ||<code>userdata</code>||what was passed as '''userdata''' to [[SDL_GetEventFilter]]()||
+ ||<code>event</code>||the desired event to query from the queue ???||
 
 == Related Functions ==
 :[[SDL_SetEventFilter]]
