camelcase pragma change

--- a/SDL_DelEventWatch.mediawiki
+++ b/SDL_DelEventWatch.mediawiki
@@ -1,5 +1,5 @@
 <!-- pragma section-numbers off -->
-<!-- pragma disable-camelcase -->
+<!-- pragma camelcase off -->
 
 = SDL_DelEventWatch =
 Use this function to remove an event watch callback added with [[SDL_AddEventWatch]]().
